@@ -45,13 +45,13 @@ EXTRA_DIST = test1 test108 test117 test127 test20 test27 test34 test46	   \
  test706 test707 test350 test351 test352 test353 test289 test540 test354   \
  test231 test1000 test1001 test1002 test1003 test1004 test1005 test1006    \
  test615 test1007 test541 test1010 test1011 test1012 test542 test543       \
- test536 test1008 test1009
+ test536 test1008 test1009 test2000 test2001
 
 filecheck:
 	@mkdir test-place; \
-	cp test[0-9]* test-place/; \
+	cp "$(top_srcdir)"/tests/data/test[0-9]* test-place/; \
 	for f in $(EXTRA_DIST); do \
-	  if test -f $$f; then \
+	  if test -f "$(top_srcdir)/tests/data/$$f"; then \
 	    rm -f test-place/$$f; \
 	  else \
 	    echo "$$f is listed but missing!"; \
