@@ -6,6 +6,14 @@
 
                                   Changelog
 
+Dan F (24 October 2007)
+- Fixed the test FTP server to support the >10000 test number notation
+
+- Added test cases 2000 and 2001 which test multiple protocols using the
+  same easy handle
+
+- Fixed the filecheck: make target to work outside the source tree
+
 Daniel S (24 October 2007)
 - Vladimir Lazarenko pointed out that we should do some 'mt' magic when
   building with VC8 to get the "manifest" embedded to make fine stand-alone
